--- a/latihan/latihan4/T4a233040109.css
+++ b/latihan/latihan4/T4a233040109.css
@@ -1,144 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block;
-}
-
-body {
-    line-height: 1;
-}
-
-ol,
-ul {
-    list-style: none;
-}
-
-blockquote,
-q {
-    quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: '';
-    content: none;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-/* Style */
-
-
-
-
 .container {
     width: 800px;
     margin: auto;
@@ -147,8 +6,8 @@ table {
 
 body {
     font: 16px/28px arial, sans-serif;
-    background-color: #eaeaea;
-    background-image: url(img/c:\Users\Nauval Muhammad Abdu\Pictures\moroccan-flower-dark.webp);
+    background-color: #2c1a1a;
+    background-image: url(img/moroccan-flower-dark.webp);
     color: #333;
 }
 
@@ -181,7 +40,7 @@ body {
 
 .hero {
     height: 200px;
-    background-image: image(c:\Users\Nauval Muhammad Abdu\Pictures\itadori.jpg);
+    background-image: url(img/itadori.jpg);
     background-size: cover;
     background-position: 0 -200px;
     border-top: 5px solid salmon;
