--- a/latihan/latihan4/T4b233040109.css
+++ b/latihan/latihan4/T4b233040109.css
@@ -295,7 +295,7 @@ body {
     body {
         font: 16px/28px arial, sans-serif;
         background-color: #eaeaea;
-        background-image: url(img/c:\Users\Nauval Muhammad Abdu\Pictures\moroccan-flower-dark.webp);
+        background-image: url(img/moroccan-flower-dark.webp);
         color: #333;
     }
 
@@ -327,7 +327,7 @@ body {
     }
 
     .hero {
-        height: 200px;
+        height: 400px;
         background-image: url(img/mental.jpeg);
         background-size: cover;
         background-position: 0 -200px;
@@ -401,7 +401,7 @@ body {
 
 .hero {
     height: 200px;
-    background-image: image(c:\Users\Nauval Muhammad Abdu\Pictures\itadori.jpg);
+    background-image: url(img/mental.jpeg);
     background-size: cover;
     background-position: 0 -200px;
     border-top: 5px solid salmon;
