--- a/latihan/latihan7/style.css
+++ b/latihan/latihan7/style.css
@@ -8,9 +8,9 @@ img {
 }
 
 body {
-    background-color: #ddd;
+    background-color: skyblue;
     font-size: 18px;
-    font-family: 'oswald', Arial, Helvetica, sans-serif;
+    font-family: 'Heebo' Arial, Helvetica, sans-serif;
     margin: 50px;
 }
 
@@ -20,34 +20,33 @@ body {
     gap: 10px;
 }
 
-/* header */
+/* Header */
 .header {
     display: grid;
     grid-template-areas:
         'hero hero feature-1'
-        'hero hero feature-2'
+        'hero hero feature-2';
 }
 
 .hero {
     grid-area: hero;
-    min-height: 300px;
-    background-image: url(img/1.jpeg);
+    min-height: 350px;
+    background-image: url(img/demon.jpeg);
     background-size: cover;
     background-position: center;
     padding: 50px;
 }
 
-.hero h2,
-.hero p {
+.hero>* {
     display: none;
 }
 
 .features {
-    background-color: black;
-    color: red;
+    background-color: #fdf9f9;
+    color: #000;
     display: grid;
     /* justify-content: center;
-    align-content: center; contoh */
+    align-content: center; */
     place-content: center;
     text-align: center;
     cursor: pointer;
@@ -55,31 +54,33 @@ body {
 
 .feature-1 {
     grid-area: feature-1;
-    background-image: url(img/1.jpeg);
+    background-image: url(img/demon2.jpeg);
     background-size: cover;
 }
 
 .feature-2 {
     grid-area: feature-2;
-    background-image: url(img/4.jpeg);
+    background-image: url(img/demon3.jpeg);
+    background-size: cover;
 }
 
-.features .jurus {
-    font-size: 3em;
-    font-weight: 200;
+.features .price {
+    font-size: 2em;
+    font-weight: 100;
 }
 
-/* navigation */
+
+/* Navigation */
 .menu {
-    display: grid;
     order: -1;
+    display: grid;
     grid-template-columns: 1fr 2fr;
     align-items: center;
 }
 
 .menu .brand {
     font-size: 1.3em;
-    color: gray
+    color: blue;
 }
 
 .menu ul {
@@ -87,12 +88,11 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     gap: 5px;
-
 }
 
 .menu a {
     display: block;
-    background-color: black;
+    background-color: #000;
     color: white;
     text-decoration: none;
     text-align: center;
@@ -105,36 +105,37 @@ body {
 .menu-toggle {
     display: none;
     flex-direction: column;
-    height: 20px;
     justify-content: space-between;
+    height: 20px;
+    /* background-color: black ; */
     position: relative;
-}
-
-.menu-toggle:hover {
-    background-color: black;
-}
-
-.menu-toggle input {
-    position: absolute;
-    width: 41px;
-    height: 28px;
-    left: -6px;
-    top: -3px;
-    opacity: 0;
-    cursor: pointer;
-    z-index: 2;
+    z-index: 999;
 }
 
 .menu-toggle span {
     display: block;
     width: 28px;
     height: 3px;
-    background-color: rgb(248, 230, 233);
+    background: #000;
     border-radius: 3px;
     transition: all 0.5s;
 }
 
-/* Humburger Menu Animation */
+.menu-toggle input {
+    display: block;
+    position: absolute;
+    background-color: #000;
+    width: 40px;
+    height: 28px;
+    left: -5px;
+    top: -5px;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 2;
+}
+
+
+/* Hamburger Menu Animation */
 .menu-toggle span:nth-child(2) {
     transform-origin: 0 0;
 }
@@ -154,20 +155,67 @@ body {
 }
 
 .menu-toggle input:checked~span:nth-child(3) {
+    opacity: 0;
     transform: scale(0);
 }
 
 
+/* services */
+.services {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+}
 
-/* responsive breakpoint */
-@media screen and (max-width: 1024px) {
+.service {
+    background-color: white;
+    padding: 15px;
+    text-align: center;
+    border: 1px solid #aaa;
+    border-radius: 3px;
+    box-shadow: 0 0 2px rgba(151, 125, 125, 0.3);
+}
+
+.services .icon {
+    font-size: 3em;
+}
+
+.services h3 {
+    font-size: 1.5em;
+}
+
+.services p {
+    font-weight: 200;
+    letter-spacing: 1px;
+    font-size: 0.8em;
+}
+
+/* Gallery */
+.gallery {
+    margin-top: 100px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 5px;
+}
+
+.gallery h2 {
+    /* grid-column-start: 1;
+    grid-column-end: -1; */
+    grid-column: 1 / -1;
+    text-align: center;
+    margin-bottom: 20px;
+
+}
+
+/* Responsive Breakpoint */
+@media (max-width: 1024px) {
     .menu {
         order: inherit;
+        grid-template-columns: 1fr;
     }
 
     .menu .brand {
-        display: 0;
-        grid-template-columns: 1fr;
+        display: none;
     }
 
     .hero>* {
@@ -196,26 +244,39 @@ body {
         display: flex;
     }
 
-    nav ul {
+    .menu ul {
+        display: flex;
         position: absolute;
         right: 0;
-        height: 0;
+        height: 100vh;
         top: 0;
-        background-color: rgb(170, 71, 176);
-        width: 80%;
+        background-color: #000;
+        width: 100%;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
-        z-index: -1;
+        z-index: 1;
         transform: translateY(-100%);
         opacity: 0;
         transition: all 1s;
     }
 
-    nav ul.slide {
+    .menu ul.slide {
         opacity: 1;
         transform: translateY(0);
     }
+
 }
 
-@media (max-width: 500px) {}
+@media (max-width: 600px) {
+    body {
+        margin: 15px;
+    }
+
+    .header {
+        grid-template-areas:
+            'hero'
+            'feature-1'
+            'feature-2';
+    }
+}
